<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AccountSettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragmentAccountSettingsToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/asset_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/account_settings"
        app:titleTextColor="@color/black" />

    <Button
        android:id="@+id/fragmentAccountSettingsBtnChangeEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/asset_email"
        android:drawableRight="@drawable/right_arrow_svgrepo_com"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:paddingStart="20dp"
        android:text="@string/change_email"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAccountSettingsToolbar" />

    <Button
        android:id="@+id/fragmentAccountSettingsBtnChangePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/asset_key"
        android:drawableRight="@drawable/right_arrow_svgrepo_com"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:paddingStart="20dp"
        android:text="@string/change_password"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAccountSettingsBtnChangeEmail" />

    <Button
        android:id="@+id/fragmentAccountSettingsBtnEmailverification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/asset_email_verification"
        android:drawableRight="@drawable/right_arrow_svgrepo_com"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:paddingStart="20dp"
        android:text="@string/email_verification"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAccountSettingsBtnChangePassword" />

    <Button
        android:id="@+id/fragmentAccountSettingsBtnDellete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/asset_delete"
        android:drawableRight="@drawable/right_arrow_svgrepo_com"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:paddingStart="20dp"
        android:text="@string/account_delete"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentAccountSettingsBtnEmailverification" />


</androidx.constraintlayout.widget.ConstraintLayout>